--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -24,15 +24,18 @@
   /**
    * Form element styles
    */
-  .input {
-    @apply py-0.5 bg-gray-600/30 border border-gray-800/70 focus:bg-gray-700/70;
-  }
   .input,
   select {
-    @apply px-2 py-0.5 rounded focus:outline-2 focus:outline-blue-300 focus:ring-0;
+    @apply px-2 py-0.5 bg-gray-600/30 border border-gray-800/70 rounded;
+    @apply focus:outline-2 focus:outline-blue-300 focus:ring-0 focus:bg-gray-700/70;
   }
+
+  .input {
+    @apply py-[3px];
+  }
+
   select option {
-    @apply text-sm rounded-lg bg-gray-800 border-gray-700 placeholder-gray-400;
+    @apply text-sm rounded-lg bg-zinc-700 border-gray-700 placeholder-gray-400;
   }
 
   /** 
@@ -60,7 +63,7 @@
    * Table body styles
    */
   tbody tr {
-    @apply border-y-1 border-gray-500/50 odd:bg-zinc-500/70 even:bg-zinc-700/70 last:border-b-0;
+    @apply border-y-1 border-gray-500/50 bg-zinc-500/70 [&:nth-child(4n-1)]:bg-zinc-700/70 [&:nth-child(4n)]:bg-zinc-700/70 last:border-b-0;
   }
   tbody tr:hover,
   tbody tr:hover {
@@ -69,10 +72,6 @@
   tbody tr.income th,
   tbody tr.income td {
     @apply bg-lime-400/7;
-  }
-  tbody tr:last-child th,
-  tbody tr:last-child td {
-    @apply pb-1;
   }
 
   /**
@@ -129,5 +128,9 @@
   }
   .wants .category-indicator {
     @apply bg-red-400;
+  }
+
+  .budget-item-config {
+    @apply flex items-baseline px-2 py-1 space-x-2 text-xs;
   }
 }
