--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -117,7 +117,7 @@
    * Category indicator styles
    */
   .category-indicator {
-    @apply h-2 w-2 rounded-full border-0 self-center shrink-0;
+    @apply w-1 rounded-full border-0 self-center shrink-0 absolute -left-2.5 h-5;
   }
 
   .needs .category-indicator {
