fix: hide arrow buttons on number input

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,6 +7,11 @@
 
 /** BASE LAYER **/
 @layer base {
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"] {
+    @apply appearance-none;
+  }
 }
 
 /** UTILITY LAYER **/
