--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -42,6 +42,9 @@
   select option {
     @apply text-sm rounded-lg bg-zinc-700 border-gray-700 placeholder-gray-400;
   }
+  label {
+    @apply font-bold;
+  }
 
   /** 
    * Base table styles
